--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -48,15 +48,21 @@
         </div>
       </div>
       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <ul
+        <div
           class="menu-block"
           [sortablejs]="baseBlocks"
           [sortablejsCloneFunction]="clonePageBlock"
-          [sortablejsOptions]="{ animation: 150, sort: false, group: {name: 'shared',pull: 'clone',put: false} }">
-          <li *ngFor="let item of baseBlocks">
+          [sortablejsOptions]="{ animation: 150, sort: false, group: {name: 'shared',pull: 'clone',put: false}, handle: '.icon-move-block' }"
+          (mouseleave)="showMoveIcon = false"
+          (mouseenter)="showMoveIcon = true"
+        >
+          <div *ngFor="let item of baseBlocks" class="menu-element-block grid-stack-item-menu">
             <img alt="" src="{{item.image}}">
-          </li>
-        </ul>
+            <app-animation-hider [show] = "showMoveIcon">
+              <i class="material-icons icon-move-block">open_with</i>
+            </app-animation-hider>
+          </div>
+        </div>
       </div>
     </div>
   </div>
