--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -1,5 +1,6 @@
-<div class="row">
+<div class="row position-relative">
   <div class="col-md-12 text-end">
+    <a class="link-back-list-pages" [routerLink]="['../../list']"><<< Zpět na seznam stránek</a>
     <button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
     </button>
     <button class="save-builder ms-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
