--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -50,13 +50,13 @@
       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div
           class="menu-block"
-          [sortablejs]="baseBlocks"
+          [sortablejs]="selectedBlockTemplates"
           [sortablejsCloneFunction]="clonePageBlock"
           [sortablejsOptions]="{ animation: 150, sort: false, group: {name: 'shared',pull: 'clone',put: false}, handle: '.icon-move-block' }"
           (mouseleave)="showMoveIcon = false"
           (mouseenter)="showMoveIcon = true"
         >
-          <div *ngFor="let item of baseBlocks" class="menu-element-block grid-stack-item-menu">
+          <div *ngFor="let item of selectedBlockTemplates" class="menu-element-block grid-stack-item-menu">
             <img alt="" src="{{item.imagePath}}">
             <app-animation-hider [show] = "showMoveIcon">
               <i class="material-icons icon-move-block">open_with</i>
