--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.html
@@ -35,7 +35,7 @@
       <div title="Smazat blok" class="btn draganddrop" (click)="deleteBlock.emit(true)">
         <i class="material-icons icon-remove">delete</i>
       </div>
-      <div *ngIf="userService.hasRole('ROLE_ADMIN')" title="Přidat jako šablonu" class="btn draganddrop" (click)="saveAsTemplateDialog()">
+      <div *ngIf="userService.hasRole('ROLE_ADMIN')" title="Přidat jako šablonu" class="btn draganddrop" (click)="pageBlockTemplateService.saveAsTemplateDialog(this)">
         <i class="material-icons icon-remove">add</i>
       </div>
 
