--- a/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
+++ b/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="form">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column wrapper">
-          <div>
+          <div appFormError>
             <label for="name" class="form-label">Název webu (slouží jako název webu v seznamu všech webů):</label>
             <input type="text" class="form-control" id="name" formControlName="name">
           </div>
