--- a/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
+++ b/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="card-body">
     <div class="d-flex wrapper justify-content-center">
-      <div *ngFor="let template of templates" class="template-container d-flex justify-content-center">
-        <img *ngIf="template.imagePath" src="{{template.imagePath}}" class="template-image">
+      <div *ngFor="let template of templates" class="template-container d-flex justify-content-center m-2">
+        <img *ngIf="template.imagePath" src="{{template.imagePath}}" class="template-image p-2">
         <a class="align-self-end create-button mb-1" [routerLink]="['../create-name', template.id]">
           <button type="button" class="btn btn-secondary">Vybrat šablonu</button>
         </a>
