--- a/frontend/src/app/web/pages/web-list/web-list.component.html
+++ b/frontend/src/app/web/pages/web-list/web-list.component.html
@@ -17,7 +17,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-end">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-end">
-          <a class="text-primary" (click)="switchToWeb(element.id)"><i class="material-icons">sync</i>Přepnout se na web</a> |
+          <a class="text-primary" [class.disabled]="element.id == webDetailResolverService.webDetail.id" (click)="switchToWeb(element.id)"><i class="material-icons">sync</i>Přepnout se na web</a> |
           <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
             class="material-icons">delete</i>smazat</a>
