--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -95,4 +95,9 @@ i.icon-delete {
   cursor: pointer;
 }
 
+::ng-deep .menu-element-block:not(.sortable-ghost) .empty-block-template {
+  border: 1px solid black;
+  height: 122px;
+  width: 100%;
+}
 
