--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -101,7 +101,16 @@
   right: 15px;
 }
 
-.new-row-up > button {
+.new-row-bottom {
+  width: 50%;
+  position: absolute;
+  text-align: left;
+  bottom: 6px;
+  height: 10px;
+  right: 15px;
+}
+
+.new-row-up > button, .new-row-center > button, .new-row-bottom > button {
   width: 30px;
   height: 30px;
   padding: 6px 0;
