--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.html
@@ -1,7 +1,14 @@
-<div class="block" [class.move-menu-hover]="isMoveMenuHover">
+<div class="block" [class.move-menu-hover]="isMoveMenuHover" (mouseleave)="hoverOnIndexRow=null">
   <div class="block-content-rows container" [sortablejs]="pageBlock.rows" [sortablejsOptions]="{group: {name: 'block', put: ['menu-row']}, handle: '.move-row', onStart: onDragStart, onEnd: onDragEnd}">
+    <div class="text-center line">
+      <div class="new-row-center" *ngIf="!pageBlock.rows.length">
+        <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button" [matMenuTriggerData]="{index: 0}">
+          <mat-icon class="add-icon-row-up">add_circle</mat-icon>
+        </button>
+      </div>
+    </div>
     <div *ngFor="let row of pageBlock.rows; index as i; trackBy: trackByRows">
-      <app-animation-hider [show]="i===hoverOnIndexRow || i===hoverOnIndexRow+1" class="hider-new-row-button">
+      <app-animation-hider [show]="i===hoverOnIndexRow || i===hoverOnIndexRow" class="hider-new-row-button">
         <div class="new-row-up">
           <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button" [matMenuTriggerData]="{index: i}">
             <mat-icon class="add-icon-row-up">add_circle</mat-icon>
@@ -9,13 +16,15 @@
         </div>
       </app-animation-hider>
       <app-grid-row (removeRow$)="removeRow(i)" class="row" [row]="row" (mouseenter)="hoverOnIndexRow=i"></app-grid-row>
-    </div>
-  </div>
-  <div class="text-center line">
-    <div class="links">
-      <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button">
-        <mat-icon>add_circle</mat-icon>
-      </button>
+      <app-animation-hider [show]="i===hoverOnIndexRow || i===hoverOnIndexRow" class="hider-new-row-button">
+        <div class="text-center line">
+          <div class="links new-row-bottom">
+            <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button">
+              <mat-icon class="add-icon-row-up">add_circle</mat-icon>
+            </button>
+          </div>
+        </div>
+      </app-animation-hider>
     </div>
   </div>
 </div>
