--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -65,7 +65,7 @@
               <img alt="" src="{{item.imagePath}}">
               <app-animation-hider [show] = "showMoveIcon">
                 <i class="material-icons icon-move-block">open_with</i>
-                <i class="material-icons icon-delete" (click)="pageBlockTemplateService.deleteTemplateBlock(item)">delete</i>
+                <i class="material-icons icon-delete" *ngIf="webDetailResolverService.isTemplateWeb()" (click)="pageBlockTemplateService.deleteTemplateBlock(item)">delete</i>
               </app-animation-hider>
             </ng-container>
             <ng-container *ngIf="last && !pageBlockTemplateService.selectedCategory">
